<resources>
    <string name="app_name">DAMGrupo10</string>
    <string name="txt_jugar">PLAY</string>
    <string name="txt_perfil">PROFILE</string>
    <string name="txt_ajustes">SETTINGS</string>
    <string name="txt_acerca_de">ABOUT...</string>
    <string name="txt_usuario">USER</string>
    <string name="txt_contrasena">ENTER PASSWORD</string>
    <string name="txt_term">Terms and conditions</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="CATEGORY">
        <item>

        </item>
    </string-array>
    <string name="txt_entrar">SIGN IN</string>
    <string name="txt_nueva_cuenta">NEW ACCOUNT</string>
    <string name="txt_crear_contrasena">CREATE PASSWORD</string>
</resources>