<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoffice">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="40">

        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_jugar">
        </Button>

        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_perfil">
        </Button>

        <Button
            android:id="@+id/btn_ajustes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_ajustes">
        </Button>

        <Button
            android:id="@+id/btn_acerca_de"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_acerca_de">
        </Button>

    </LinearLayout>




</LinearLayout>